2.5.0 (09-07-2019)
- Fix: A3es teaching services degrees sort order changed
- Fix: A3es courses upload fixed due to API changes regarding the curricular unit name
- Refactor: A3es moved teaching specialization area from qualification to dynamic fields
- Refactor: prepare to remove ulisboa-specifications dependency

2.4.1 (27-06-2019)
- Improvement: A3es teaching services degrees sort order changed

2.4.0 (26-06-2019)
- Improvement: A3es process now can be accessed by coordinators 
- Improvement: A3es minor UI improvements

2.3.0 (14-06-2019)
- Refactor: upgrade ulisboa-specifications dependency